--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -8,7 +8,7 @@
               <div class="form-row align-items-center">
                 <div class="col-md-1">
                   <div class="align-self-start">
-                    <img class="cadastro" src="assets/images/linhas_cadastro.png" />
+                    <img class="cadastro d-none d-sm-block" src="assets/images/linhas_cadastro.png" />
                   </div>
                 </div>
                 <div class="col-md-10">
@@ -55,7 +55,7 @@
                 </div>
                 <div class="col-md-1">
                   <div class="align-self-start">
-                    <img class="cadastro" src="assets/images/linhas_cadastro.png" />
+                    <img class="cadastro d-none d-sm-block" src="assets/images/linhas_cadastro.png" />
                   </div>
                 </div>
               </div>
