--- a/src/app/pages/configurar-agenda/configurar-dia-atendimento/configurar-dia-atendimento.component.html
+++ b/src/app/pages/configurar-agenda/configurar-dia-atendimento/configurar-dia-atendimento.component.html
@@ -44,7 +44,7 @@
                     <div class="form-group pt-2">
                       <div class="text-right">
                         <button class="btn btn-primary mr-3" (click)="addHora()">
-                          Adcionar horas
+                          Informar horário
                         </button>
                         <button class="btn btn-success" (click)="salvar(formDiaAtendimento.value)">
                           Salvar
