--- a/src/app/pages/gestao-paciente/paciente/paciente.component.html
+++ b/src/app/pages/gestao-paciente/paciente/paciente.component.html
@@ -63,13 +63,13 @@
                           </div>
                         </ng-template>
                       </ngx-datatable-column>
-                      <ngx-datatable-column name="Última Consulta" prop="ultimaConsulta">
+                      <!--<ngx-datatable-column name="Última Consulta" prop="ultimaConsulta">
                         <ng-template ngx-datatable-cell-template let-row="row">
                           <div class="text-center">
                             {{ row.idPatient }}
                           </div>
                         </ng-template>
-                      </ngx-datatable-column>
+                      </ngx-datatable-column>-->
                       <ngx-datatable-column name="Data de Nascimento" prop="dataNascimento">
                         <ng-template ngx-datatable-cell-template let-row="row">
                           <div class="text-center">
