--- a/src/app/pages/cadastro/cadastro-medico/cadastro-medico.component.html
+++ b/src/app/pages/cadastro/cadastro-medico/cadastro-medico.component.html
@@ -8,15 +8,14 @@
               <div class="form-row align-items-center">
                 <div class="col-md-1">
                   <div class="align-self-start">
-                    <img class="cadastro" src="assets/images/linhas_cadastro.png" />
+                    <img class="cadastro d-none d-sm-block" src="assets/images/linhas_cadastro.png" />
                   </div>
                 </div>
                 <div class="col-md-10">
                   <div class="text-center m-5">
                     <button nbButton outline status="primary" type="button" class="btn btn-outline-primary col-md-5 m-3"
                       (click)="dadosPessoais($event.target.value)" value="informacao"><nb-icon
-                        icon="person-outline"></nb-icon> Informações
-                      Gerais</button>
+                        icon="person-outline"></nb-icon>Dados Gerais</button>
                     <button nbButton outline status="primary" type="button" class="btn btn-outline-primary col-md-5 m-3"
                       (click)="dadosPessoais($event.target.value)" value="contato"><nb-icon
                         icon="email-outline"></nb-icon>
@@ -26,13 +25,12 @@
                     <div class="form-group">
                       <h6>Cadastro</h6>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group row pl-3">
                       <div class="col-md-6">
                         <label for="nome">Nome completo*</label>
                         <input class="form-control" name="nome" id="nome" type="text" formControlName="nome" />
                       </div>
-                    </div>
-                    <div class="form-group row pl-3">
+                    
                       <div class="col-md-3">
                         <label for="cpf">CPF*</label>
                         <input class="form-control" name="cpf" id="cpf" type="text" formControlName="cpf"
@@ -53,6 +51,13 @@
                           <input class="date" class="form-control" type="date" id="dateNasc" name="mydate"
                             formControlName="dataNascimento" maxlength="10" />
                         </div>
+                      </div>                      
+                      <div class="col-md-3">
+                        <label for="nome">Especialidade*</label>
+                        <nb-select class="multiple" multiple placeholder="SELECIONE" formControlName="especialidade">
+                          <nb-option *ngFor="let especialidade of listEspecialidade" value="{{ especialidade.id }}">{{
+                            especialidade.name }}</nb-option>
+                        </nb-select>
                       </div>
                       <div class="col-md-6">
                         <label class="mat-button">Sexo biologico*</label>
@@ -68,14 +73,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="form-group row pl-3">
-                      <div class="col-md-3">
-                        <label for="nome">Especialidade*</label>
-                        <nb-select class="multiple" multiple placeholder="SELECIONE" formControlName="especialidade">
-                          <nb-option *ngFor="let especialidade of listEspecialidade" value="{{ especialidade.id }}">{{
-                            especialidade.name }}</nb-option>
-                        </nb-select>
-                      </div>
+                    <div class="form-group row pl-3">                     
                       <div class="col-md-5">
                         <label for="imgem">Adicione sua foto</label>
                         <input class="form-control-file media-body" name="imgem" id="imgem" type="file"
@@ -181,8 +179,8 @@
                       <div class="col-md-4">
                         <div class="form-check-inline">
                           <input type="checkbox" class="form-check-input" id="aceitoTermo" name="grupo"
-                            formControlName="aceitoTermo" value=" " /> Aceito
-                          <a href="#" target="_blank"> os Termos e condições </a>
+                            formControlName="aceitoTermo" value=" " /> Li e aceito
+                          <a class="a-termo p-1" href="http://aditi.care.saude.ws/termo_medico.pdf" target="_blank"> os Termos e condições </a>
                         </div>
                       </div>
                     </div>
@@ -198,7 +196,7 @@
                 </div>
                 <div class="col-md-1">
                   <div class="align-self-start">
-                    <img class="cadastro" src="assets/images/linhas_cadastro.png" />
+                    <img class="cadastro d-none d-sm-block" src="assets/images/linhas_cadastro.png" />
                   </div>
                 </div>
               </div>
