--- a/src/app/pages/configurar-agenda/configurar-excecao-atendimento/configurar-excecao-atendimento.component.html
+++ b/src/app/pages/configurar-agenda/configurar-excecao-atendimento/configurar-excecao-atendimento.component.html
@@ -35,12 +35,12 @@
                       <label class="div-expediente">Terá expediente</label>
                       <div class="row pl-3">
                         <label class="radio-inline mr-3">
-                          <input class="mat-button" type="radio" id="radio" name="optradio" checked value="S"
-                            (click)="expediente($event.target.value)">
+                          <input class="mat-button" type="radio" id="radio" name="optradio" value="S"
+                            (click)="expediente($event.target.value)" (click)="addHora()" >
                           Sim</label>
                         <label class="radio-inline">
                           <input class="mat-button" type="radio" id="radio" name="optradio" value="N"
-                            (click)="expediente($event.target.value)"> Não</label>
+                            (click)="expediente($event.target.value)" (click)="removerCard()"> Não</label>
                       </div>
                     </div>
                   </div>
@@ -49,7 +49,7 @@
                   <div class="col-md-12">
                     <div class="text-right">
                       <button class="btn btn-primary mr-3" id="addHoras" (click)="addHora()" *ngIf="isCardHoras">
-                        Adcionar horas
+                        Informar horário
                       </button>
                       <button class="btn btn-success" (click)="salvar(formExcecaoAtendimento.value)">
                         Salvar
