--- a/src/app/pages/gestao-paciente/novo-paciente/novo-paciente.component.html
+++ b/src/app/pages/gestao-paciente/novo-paciente/novo-paciente.component.html
@@ -65,6 +65,17 @@
                     <h6 class="p-1">Informações Gerais</h6>
                   </div>
                   <div class="form-row align-items-center">
+                    <div class="form-group col-md-4">
+                      <label for="nome">Escolha o médico do paciente</label>
+                      <select class="form-control" formControlName="medico" 
+                      (change)="verificaMedico($event.target.value)">
+                        <option value="null" selected>SELECIONE</option>
+                        <option *ngFor="let medico of listMedico" value="{{ medico.id }}">{{
+                          medico.name}}</option>
+                      </select>
+                    </div>
+                  </div>                 
+                  <div class="form-row align-items-center">
                     <div class="form-group row">
                       <div class="col-md-12">
                         <label for="imagem">Adicione sua foto</label>
@@ -75,11 +86,11 @@
                   </div>
                   <div class="form-row align-items-center">
                     <div class="form-group col-md-6">
-                      <label for="nome">Nome</label>
+                      <label for="nome">Nome*</label>
                       <input class="form-control" name="nome" id="nome" type="text" formControlName="nome" />
                     </div>
-                    <div class="form-group col-md-2">
-                      <label for="dateNasc">Data de nascimento</label>
+                    <div class="form-group col-md-3">
+                      <label for="dateNasc">Data de nascimento*</label>
                       <div class="row pl-3">
                         <input class="date" type="date" id="dateNasc" name="mydate" formControlName="dateNasc"
                           maxlength="10" />
@@ -88,12 +99,12 @@
                   </div>
                   <div class="form-row align-items-center">
                     <div class="form-group col-md-3">
-                      <label for="CPF">CPF</label>
+                      <label for="CPF">CPF*</label>
                       <input class="form-control" name="cpf" id="cpf" type="text" formControlName="cpf"
                         mask="000.000.000-00" />
                     </div>
                     <div class="form-group col-md-3">
-                      <label class="mat-button mb-3">Sexo biologico:</label>
+                      <label class="mat-button mb-3">Sexo biologico*</label>
                       <div class="row">
                         <label class="radio-inline mr-3 pl-3">
                           <input class="mat-button" type="radio" id="radio" name="optradio" value="M"
@@ -112,12 +123,12 @@
                   </div>
                   <div class="form-row align-items-center">
                     <div class="form-group col-md-3">
-                      <label for="CEP">CEP</label>
+                      <label for="CEP">CEP*</label>
                       <input class="form-control" name="cep" id="cep" type="text" formControlName="cep"
                         mask="00000-000" />
                     </div>
                     <div class="form-group col-md-1">
-                      <label for="numero">N°</label>
+                      <label for="numero">N°*</label>
                       <input class="form-control" name="numero" id="numero" type="text" formControlName="numero" />
                     </div>
                     <div class="form-group col-md-4">
@@ -128,18 +139,18 @@
                   </div>
                   <div class="form-row align-items-center">
                     <div class="form-group col-md-4">
-                      <label for="endereco">Endereço</label>
+                      <label for="endereco">Endereço*</label>
                       <input class="form-control" name="endereco" id="endereco" type="text"
                         formControlName="endereco" />
                     </div>
                     <div class="form-group col-md-4">
-                      <label for="bairro">Bairro</label>
+                      <label for="bairro">Bairro*</label>
                       <input class="form-control" name="bairro" id="bairro" type="text" formControlName="bairro" />
                     </div>
                   </div>
                   <div class="form-row align-items-center">
                     <div class="form-group col-md-4">
-                      <label for="estado">Estado</label>
+                      <label for="estado">Estado*</label>
                       <select class="form-control" formControlName="estado" (change)="buscaCidade($event.target.value)">
                         <option value="null" selected>SELECIONE</option>
                         <option *ngFor="let estado of listEstado" value="{{ estado.id }}">{{
@@ -147,7 +158,7 @@
                       </select>
                     </div>
                     <div class="form-group col-md-4">
-                      <label for="cidade">Cidade</label>
+                      <label for="cidade">Cidade*</label>
                       <select class="form-control" formControlName="cidade">
                         <option value="null" selected>SELECIONE</option>
                         <option *ngFor="let cidade of listCidade" value="{{ cidade.id }}">{{
@@ -162,19 +173,19 @@
                   </div>
                   <div class="form-row align-items-center">
                     <div class="form-group col-md-5">
-                      <label for="celular">Celular</label>
+                      <label for="celular">Celular*</label>
                       <input class="form-control" name="celular" id="celular" type="text" formControlName="celular"
                         mask="(00) 0 0000-0000 || (00) 0000-0000" />
                     </div>
                   </div>
                   <div class="form-row align-items-center">
                     <div class="form-group col-md-5">
-                      <label for="email">E-mail</label>
+                      <label for="email">E-mail*</label>
                       <input class="form-control" name="email" id="email" type="text" formControlName="email" />
                     </div>
                   </div>
                 </div>
-                <div *ngIf="isAddFotos">
+                <div *ngIf="isAddDependente">
                   <div class="form-row align-items-center">
                     <h6 class="p-1">Informações Gerais</h6>
                   </div>
