--- a/src/app/pages/configurar-agenda/gerar-qr-code/gerar-qr-code.component.html
+++ b/src/app/pages/configurar-agenda/gerar-qr-code/gerar-qr-code.component.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="form-row align-items-center">
                   <div class="form-group col-md-12">
-                    <textarea class="form-control" rows="3" formControlName="qrCode" id="qrCode"
+                    <textarea class="form-control" rows="3" formControlName="qrCode" id="qrCode" [value]="this.qrCode"
                       maxlength="1000"></textarea>
                   </div>
                 </div>
