--- a/src/app/pages/configurar-clinica/associar-medico/associar-medico.component.html
+++ b/src/app/pages/configurar-clinica/associar-medico/associar-medico.component.html
@@ -20,7 +20,7 @@
                   <div class="form-group col-md-4">
                     <div class="form-group">
                       <div class="div-medico">
-                        <label for="cpf">Médico</label>
+                        <label for="cpf">Médico*</label>
                         <input class="form-control" name="cpf" id="cpf" type="text" formControlName="cpf"
                           mask="000.000.000-00" maxlength="14" placeholder="Informa o CPF do médico" />
                       </div>
