--- a/src/app/pages/cadastro/cadastro-clinica/cadastro-clinica.component.html
+++ b/src/app/pages/cadastro/cadastro-clinica/cadastro-clinica.component.html
@@ -11,7 +11,7 @@
                     <img class="cadastro d-none d-sm-block" src="assets/images/linhas_cadastro.png" />
                   </div>
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-10 mb-auto">
                   <div class="form-group">
                     <div class="text-center m-5">
                       <button nbButton outline status="primary" type="button"
@@ -53,7 +53,14 @@
                           {{this.msgErro}} <br /><br />
                         </div>
                       </div>
-                    </div>                    
+                    </div>          
+                    <div class="form-group row pl-3 mt-lg-n4">                     
+                      <div class="col-md-5">                        
+                        <div class="align-self-start">
+                          <img src="{{this.avatar }}" style="height: 80px;"/>
+                        </div>
+                      </div>
+                    </div>          
                     <div class="form-group row pl-3">
                       <div class="col-md-5">
                         <label for="imgem">Adicione a logo da clínica</label>
@@ -161,7 +168,7 @@
                         <div class="form-check-inline">
                           <input type="checkbox" class="form-check-input" id="aceitoTermo" name="grupo"
                             formControlName="aceitoTermo" value="" /> Li e aceito
-                          <a class="a-termo p-1" href="http://aditi.care.saude.ws/termo_clinica.pdf" target="_blank"> os Termos e condições</a>
+                          <a class="a-termo p-1" href="http://aditi.care.saude.ws/termo_clinica.pdf" target="_blank"> os Termos e condições*</a>
                         </div>
                       </div>
                     </div>
