Criar tela novo atendimento

--- a/src/app/pages/configurar-agenda/configurar-excecao-atendimento/configurar-excecao-atendimento.component.html
+++ b/src/app/pages/configurar-agenda/configurar-excecao-atendimento/configurar-excecao-atendimento.component.html
@@ -25,7 +25,7 @@
                     <div class="form-group">
                       <label for="dataExcecao">Escolha a data*</label>
                       <div class="row pl-3">
-                        <input class="date" type="date" id="dataExcecao" name="mydate" formControlName="dataExcecao"
+                        <input class="form-control date" type="date" id="dataExcecao" name="mydate" formControlName="dataExcecao"
                           maxlength="10" />
                       </div>
                     </div>
