--- a/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.html
+++ b/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.html
@@ -76,7 +76,7 @@
                         </button>
                         <button
                           class="btn btn-success ml-2"
-                          (click)="buscarAtendimento(formBuscarAtendimento.value)">
+                          (click)="agendarAtendimento()">
                           AGENDAR ATENDIMENTO
                         </button>
                       </div>
