--- a/src/app/pages/cadastro/cadastro-medico/cadastro-medico.component.html
+++ b/src/app/pages/cadastro/cadastro-medico/cadastro-medico.component.html
@@ -48,7 +48,7 @@
                       <div class="col-md-3">
                         <div class="form-group">
                           <label for="dataNascimento">Data de nascimento*</label>
-                          <input class="date" class="form-control" type="date" id="dateNasc" name="mydate"
+                          <input class="form-control date" class="form-control" type="date" id="dateNasc" name="mydate"
                             formControlName="dataNascimento" maxlength="10" />
                         </div>
                       </div>                      
