--- a/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.html
+++ b/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.html
@@ -134,6 +134,17 @@
                           </div>
                         </ng-template>
                       </ngx-datatable-column>
+                      <ngx-datatable-column
+                        name="Ações"
+                        prop="acoes">
+                        <ng-template ngx-datatable-cell-template let-row="row">
+                          <div class="text-center"><a class="home-icon" (click)="detalhes(row)">
+                              <i class="fa fa-info-circle fa-2x" aria-hidden="true"> </i>
+                            </a>
+                          </div>
+
+                        </ng-template>
+                      </ngx-datatable-column>
                       <ngx-datatable-footer>
                         <ng-template ngx-datatable-footer-template let-rowCount="rowCount" let-pageSize="pageSize"
                           let-selectedCount="selectedCount" let-curPage="curPage" let-offset="offset">
