feat: Adicionando funções na tela de detalhes do atendimento

--- a/src/app/pages/atendimento/detalhe-atendimento/motivo-cancelamento/motivo-cancelamento.component.html
+++ b/src/app/pages/atendimento/detalhe-atendimento/motivo-cancelamento/motivo-cancelamento.component.html
@@ -2,7 +2,7 @@
   <nb-card-header>Cancelar atendimento</nb-card-header>
   <nb-card-body>
     <textarea  #reason rows="10" nbInput shape="round"
-    placeholder="Motivo do cancelamento" ></textarea>
+    placeholder="Motivo do cancelamento*" ></textarea>
   </nb-card-body>
   <nb-card-footer>
     <button class="cancel" nbButton status="danger" (click)="cancel()">Cancelar</button>
