--- a/src/app/pages/atendimento/detalhe-atendimento/detalhe-atendimento.component.html
+++ b/src/app/pages/atendimento/detalhe-atendimento/detalhe-atendimento.component.html
@@ -1,6 +1,11 @@
 <div class="container-fluid">
   <nb-card>
-    <nb-card-header>
+    <nb-card-header class="aditi-header">
+      <div class="back-link">
+        <a class="m-lg-n3" (click)="previousPage()" aria-label="back">
+          <nb-icon icon="arrow-back" title="voltar"></nb-icon>
+        </a>
+      </div>
       <h5>Detalhes do atendimento</h5>
     </nb-card-header>
     <nb-card-body>
@@ -77,7 +82,7 @@
           <span>Cancelar</span>
         </nb-action>
         <nb-action *ngIf="atendimento.status ==='01 - Aguardando Aprovação'
-        && atendimento.comprovante !== null">
+        && atendimento.comprovante !== null" (click)="aprovarPagamento()" >
           <nb-icon class="action-icon" icon="checkmark-circle-outline"></nb-icon>
           <span>Aprovar pagamento</span>
         </nb-action>
@@ -91,8 +96,8 @@
           <nb-icon class="action-icon" icon="archive-outline"></nb-icon>
           <span>Ver histórico</span>
         </nb-action>
-        <nb-action *ngIf="atendimento.status ==='03 - Consulta Confirmada'
-        && atendimento.comprovante !== null">
+        <nb-action *ngIf="(atendimento.status ==='01 - Aguardando Aprovação' || atendimento.status ==='03 - Consulta Confirmada')
+        && atendimento.comprovante !== null" (click)="abrirComprovante()">
           <nb-icon class="action-icon" icon="attach-outline"></nb-icon>
           <span>Ver comprovante</span>
         </nb-action>
