--- a/src/app/pages/atendimento/detalhe-atendimento/detalhe-atendimento.component.html
+++ b/src/app/pages/atendimento/detalhe-atendimento/detalhe-atendimento.component.html
@@ -88,7 +88,7 @@
         </nb-action>
         <nb-action *ngIf="atendimento.status ==='03 - Consulta Confirmada'
         && atendimento.modalidade ==='Consulta por Video Chamada'
-        && atendimento.urlCall !== null">
+        && atendimento.urlCall !== null" (click)="goToLink(atendimento.urlCall)">
           <nb-icon class="action-icon" icon="wifi-outline"></nb-icon>
           <span>Iniciar atendimento</span>
         </nb-action>
